# nostosdb-cli

./: .gitignore  AGENTS.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  NOTICE  PREVIEW.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: attest-candidate.yml  ci.yml
distribution/: README.md  release-manifest.json
distribution/homebrew/Formula/: nostdb.rb.in  nostos.rb.in
distribution/scripts/: assemble_candidate.py  common.py  generate_metadata.py  render_homebrew.py  smoke_candidate.py  stage_npm_candidate.py  verify_candidate.py  verify_channels.py  verify_local.py  verify_source.py
distribution/tests/: test_distribution.py
npm/: LICENSE  NOTICE  README.md  package.json
npm/lib/: launcher.cjs  platform.cjs
npm/scripts/: verify-packages.cjs
npm/tests/: launcher.test.cjs  platform.test.cjs
src/: main.rs
tests/: cli.rs
