[package]
name = "nostos-cli"
description = "Command-line and interactive client for NostosDB"
edition = "2024"
license = "SSPL-1.0"
publish = false
rust-version = "1.85"
version = "0.1.0"

[[bin]]
name = "nostos"
path = "src/main.rs"

[dependencies]
base64 = "=0.22.1"
nostos-client = { path = "../nostos-server/client", version = "0.1.0" }
nostos-engine = { path = "../nostos-core/crates/nostos-engine", version = "0.1.0" }
serde_json = "1.0.150"

[lints.rust]
unsafe_code = "forbid"
