[package]
name = "nostdb-cli"
description = "Command-line and interactive client for NostDB"
edition = "2024"
license = "SSPL-1.0"
publish = false
rust-version = "1.85"
version = "0.0.1"

[[bin]]
name = "nostdb"
path = "src/main.rs"

[dependencies]
base64 = "=0.22.1"
nostdb-client = { path = "../nostdb-server/client", version = "0.0.1" }
nostdb-engine = { path = "../nostdb-core/crates/nostdb-engine", version = "0.0.1" }
serde_json = "1.0.150"

[lints.rust]
unsafe_code = "forbid"
